--- a/04-Ajax/homework/index.html
+++ b/04-Ajax/homework/index.html
@@ -8,18 +8,18 @@
   <title>HomeWork Ajax</title>
 </head>
 <body>
+  <h2>Mis amigos!</h2>
   <button id='boton'>Ver Amigos</button>
   <ul id='lista'>
   </ul>
 
-  <h2>Ver Amigos</h2>
-  <img src='https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif' />
-  <hr>
+  <h2>Ver Amigo</h2>
   <input id='input'></input>
   <button id='search'>Buscar</button>
   <span id='amigo'></span>
-
   <hr>
+
+  <h2>Eliminar Amigo</h2>
   <input id='inputDelete'></input>
   <button id='delete'>Delete</button>
   <span id='success'></span>
